--- a/workflow-support/templates/galaxy.yml.j2
+++ b/workflow-support/templates/galaxy.yml.j2
@@ -9,4 +9,5 @@ license:
 - Apache-2.0
 repository: https://github.com/kpfleming/ansible-powerdns-auth
 issues: https://github.com/kpfleming/ansible-powerdns-auth/issues
+documentation: https://kpfleming.github.io/ansible-powerdns-auth
 build_ignore: ['*~']
