Use j2cli instead of ansible-playbook for rendering templates.
Reorganize and cleanup tox.ini

--- a/workflow-support/templates/galaxy.yml.j2
+++ b/workflow-support/templates/galaxy.yml.j2
@@ -1,6 +1,6 @@
 namespace: kpfleming
 name: powerdns_auth
-version: {{ "0.0.0" if tag == "main" else tag }}
+version: {{ "0.0.0" if TAG == "main" else TAG }}
 readme: README.md
 authors:
 - Kevin P, Fleming <kevin@km6g.us> @kpfleming:irc/libera.chat
